--- a/index.html
+++ b/index.html
@@ -83,11 +83,40 @@
         </div>
       </div>
     </form>
+
+
+    <div class="d-none" id="home">
+      <nav class="navbar navbar-expand-lg navbar-dark  group">
+          <div class="container">
+              <a class="title-style"><h2> SMART LOGIN </h2></a>
+              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+  
+      
+              <div class="button">
+                <a class="" href="index.html">
+                  <button class="btn btn-style position-relative w-100 border-0 z-0" id="logout" >
+                    Logout
+                  </button>
+                </a>
+              </div>
+          </div>
+      </nav>
+      <div class="container my-5 text-center bg-light h-100 d-flex align-items-center">
+          <div class="group m-auto w-75 p-5">
+              <h1  id="userName"><img src="./images/wave.gif" class="img-fluid z-0" style="width: 10%;"></h1>
+          </div>
+      </div>
+  
+    </div>
+  </div>
   </div>
   <script src="./js/unpkg.com_sweetalert@2.1.2_dist_sweetalert.min.js"></script>
   <script src="./js/bootstrap.bundle.min.js"></script>
   <script src="./js/registration.js"></script>
   <script src="./js/logIn.js"></script>
+  <script src="./js/home.js"></script>
 </body>
 
 </html>
